    is made to the wiki. It's built as a blog using inline, so it can have
    an rss feed that users can subscribe to.
  * Removed support for sending commit notification mails. Along with it went
    the svnrepo and notify settings, though both will be ignored if left in
    setup files. Also gone with it is the "user()" pagespec.
  * Add refresh hook.

 -- Joey Hess <joeyh@debian.org>  Fri, 11 Jan 2008 15:09:37 -0500

ikiwiki (2.20) unstable; urgency=low

  * inline: Add copyright/license info on a per-post basis to atom
    feeds if available. (rss doesn't allow such info on a per-post basis)
  * Also include overall copyright/license and author info in atom feeds if
    available.
  * meta: Allow copyright/license metadata to contain arbitrary markup.
  * Call preprocessor hooks in void context during the scan pass. This allows
    the hook to determine if it's just scanning, and avoid expensive
    operations.
  * img: Detect scan mode and avoid generating and writing the image file
    during it, for a 2x speedup.
  * meta: Run in scan mode again (more intelligently) and re-add support for
    meta link.
  * Fix support for the case where metadata appears after an inline directive
    that needs to use it. This was broken in version 2.16.
  * template: Remove bogus htmlize pass added in 2.16.
  * template: Htmlize template variables, but also provide a raw version
    via `<TMPL_VAR raw_variable>`.
  * When htmlizing text, if the input is a single line with no newline,
    and the htmlizer (such as markdown and textile) generates a html
    paragraph, remove it. This allows removing several hacks from other
    plugins that htmlize fragements of pages.
  * In preferences, allow the subscriptions and email fields to be cleared.
  * teximg: Fix to support the same formula on multiple pages.

 -- Joey Hess <joeyh@debian.org>  Thu, 10 Jan 2008 14:52:57 -0500

ikiwiki (2.19) unstable; urgency=low
