@@ -10,3 +10,17 @@ plugin, but you can use it elsewhere too if you like. It's used like this:
 
 	\[[inline pages="internal(recentchanges/change_*)"
 	template=recentchanges show=0]]
+
+Here's an example of how to show only changes to "bugs/*".
+This matches against the title of the change, which includes a list of
+modified pages.
+
+	\[[inline pages="internal(recentchanges/change_*) and title(*bugs/*)"
+	template=recentchanges show=0]]
+
+Here's an example of how to show only changes that Joey didn't make.
+(Joey commits sometimes as user `joey`, and sometimes via openid.)
+	
+	\[[inline pages="internal(recentchanges/change_*) and
+	!author(joey) and !author(http://joey.kitenet.net*)"
+	template=recentchanges show=0]]
