@@ -15,6 +15,8 @@ use IkiWiki::Setup::Standard {
 	syslog => 0,
 	userdir => "users",
 	usedirs => 0,
+	rcs => "git",
+	rss => 1,
+	url => "http://ikiwiki.info/",
 	add_plugins => [qw{goodstuff version haiku polygen fortune}],
-	disable_plugins => [qw{recentchanges}],
 }
