@@ -2,7 +2,7 @@
 <TMPL_IF AUTHORURL>
 [[meta authorurl="""<TMPL_VAR AUTHORURL>"""]]
 </TMPL_IF>
-[[meta title="""update of <TMPL_VAR WIKINAME>'s <TMPL_LOOP NAME="PAGES"> <TMPL_VAR PAGE></TMPL_LOOP>"""]]
+[[meta title="""update of <TMPL_VAR WIKINAME>'s<TMPL_LOOP NAME="PAGES"> <TMPL_VAR PAGE></TMPL_LOOP>"""]]
 <div class="metadata">
 <span class="desc"><br />Changed pages:</span>
 <span class="pagelinks">
